# SnowCup-AI

./: CMakeLists.txt  Makefile  README.md  contestant_code.cpp  egg_sdk.cpp  egg_sdk.h  schema.cpp  schema.h  singleton.h  stream_helper.cpp  stream_helper.h
